--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -21,35 +21,60 @@
                 <ul class="list-group list-group-flush">
 
                   <li class="list-group-item">
-                    <h2 class="product-card-details-product-name">Product Name</h2>
+                    <h2 class="product-card-details-product-name">
+                    {{product.product_name}}
+                    </h2>
                   </li>
 
                   <li class="list-group-item">
-                    <h6>Product Description:</h6>
-                    <h6 class="product-card-details-product-desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione enim sint, quia natus quod eos laborum aliquid tempore quasi labore dicta asperiores blanditiis laudantium. Est minus obcaecati quibusdam cupiditate ipsam.
+                    <h6>Описание:</h6>
+                    <h6 class="product-card-details-product-desc">
+                    {{product.description}}
                     </h6>
 
                   </li>
-
+                    
                   <li class="list-group-item">
-                    <h6>Category Tags: <span class="badge bg-black">White</span>    </h6>
+                   
+                    <h6>Есть в налаличии:
+                    {% if product.availability == true%}
+                     <span class="badge bg-red"></span>
+                     {%else%}
+                     <span class="badge bg-green">White</span>
+                     {%endif%}
+                    </h6>
                   </li>
 
 
                   <li class="list-group-item">
 
-                    <h6> Quantity: </h6>
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                      <button type="button" class="btn btn-dark">-</button>
-                      <input type="text" class="form-control" placeholder="0" style="width: 2.4rem;" disabled>
-                      <button type="button" class="btn btn-dark">+</button>
+                    <h6> Цена: </h6>
+                    <h3>{{product.cost}}</h3>
+
+                  </li>
+
+                  <li class="list-group-item">
+                   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                      Показать
+                    </button>
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal-dialog">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Контакты</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            тут контакты для связи
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-
-                  </li>
-
-                  <li class="list-group-item">
-                    <a href="" class="btn btn-dark">WishList</a>
-                    <a href="" class="btn btn-dark">Add To Cart</a>
+                    
+                    <a href="" class="btn btn-dark">Нравится</a>
                   </li>
 
               </ul>
