--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -1,124 +1,130 @@
 <div class="row">
-  <div class="d-flex justify-content-center align-items-center mb-3 mt-5">
-    <h4 class="text-right">Резюме</h4>
-  </div>
-  <div class="col-md-3 border-end">
-    <div class="d-flex flex-column align-items-center text-center py-5">
-      <img class="rounded-circle mt-5" width="150px" src="{{ creator_avatar.url }}">
-      <span class="font-weight-bold">{{ first_name }}
-      </span>
-      <span class="text-black-50">{{ email }}</span>
-      <span> </span>
+    <div class="d-flex justify-content-center align-items-center mb-3 mt-5">
+        <h4 class="text-right">Резюме</h4>
     </div>
-  </div>
+    <div class="col-md-3 border-end">
+        <div class="d-flex flex-column align-items-center text-center py-5">
+            <img class="rounded-circle mt-5" width="150px" src="{{ creator_avatar.url }}">
+            <span class="font-weight-bold">{{ first_name }}
+            </span>
+            <span class="text-black-50">{{ email }}</span>
+            <span> </span>
+        </div>
+    </div>
 
-  <div id="main_change" class="col-md-8 ml-3">
-    <form method="post" action="./">
-      {% csrf_token %}
-      <div class="p-3 py-5">
-        <div class="row mt-3 d-flex align-items-center">
-          <div class="col-md-4">
-            <div class="form-check form-switch">
-<!--              <input class="form-check-input" type="checkbox" name="iscompany" onchange="isCompany()"-->
-<!--                id="isCompanyTrigger">-->
-<!--              <label class="form-check-label" for="isCompanyTrigger">Вы являетесь компанией?</label>-->
-                {{ form9.is_company }}
+    <div id="main_change" class="col-md-8 ml-3">
+        <form method="post" action="./">
+            {% csrf_token %}
+            <div class="p-3 py-5">
+                <div class="row mt-3 d-flex align-items-center">
+                    <div class="col-md-4">
+                        <div class="form-check form-switch">
+                            <!--              <input class="form-check-input" type="checkbox" name="iscompany" onchange="isCompany()"-->
+                            <!--                id="isCompanyTrigger">-->
+                            {{ form9.is_company }}
+
+                            <label class="form-check-label" for="isCompanyTrigger">Вы являетесь компанией?</label>
+                        </div>
+                    </div>
+                    <div class="col-md-8" id="companyTriggerOn" style="opacity: 0;">
+                        <!--            <input type="text" id="companyInput" name="profile_company_name" class="form-control" placeholder="Название компании" disables>-->
+                        {{ form9.company_name }}
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row mt-3 mb-3">
+                    <div class="col-md-12">
+                        <h1 class="labels">Расскажите о себе</h1>
+                        <!--            <textarea name="profile_description" class="form-control"></textarea>-->
+                        {{ form9.description }}
+                    </div>
+                </div>
+
+                <div class="row mt-3 mb-3">
+                    <h1 class="labels mb-4">Контакты</h1>
+                    <div class="col-md-6">
+                        <div class="input-group mb-3">
+                            <!--              <input type="text" class="form-control" placeholder="@tag">-->
+
+                            {{ form9.telegram }}
+                            <snap class="input-group-text" style="color: white; background-color: #229ED9;">
+                                <i class="fab fa-telegram"></i>
+                            </snap>
+                        </div>
+                        <div class="input-group mb-3">
+                            <!--              <input type="text" class="form-control" placeholder="https://vk.com/yourid">-->
+
+                            {{ form9.vk }}
+                            <snap class="input-group-text" style="color: white; background-color: #4c75a3;">
+                                <i class="fab fa-vk"></i>
+                            </snap>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="input-group mb-3">
+                            <!--              <input type="text" class="form-control" placeholder=" https://instagram.com/tag">-->
+
+                            {{ form9.instagram }}
+                            <snap class="input-group-text" style="color: white; background-color: #ac2bac;">
+                                <i class="fab fa-instagram"></i>
+                            </snap>
+                        </div>
+                        <div class="input-group mb-3">
+                            <!--              <input type="text" class="form-control" placeholder="+71234567890">-->
+
+                            {{ form9.whatsapp }}
+                            <snap class="input-group-text" style="color: white; background-color: #25d366;">
+                                <i class="fab fa-whatsapp"></i>
+                            </snap>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row mt-3 mb-3">
+                    <div class="col-md-8">
+                        <label class="labels">Загрузить фото</label>
+                        <!--            <input id="fileupload" class="form-control" name="profile_images" type="file" />-->
+                        {{ form9.cover }}
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row mt-3 mb-3">
+                    <div class="col-md-12">
+                        <div class="form-check form-switch">
+                            <!--              <input class="form-check-input" type="checkbox" value="1">-->
+
+                            {{ form9.published }}
+                            <label class="form-check-label">Хотите опубликовать резюме?</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mt-5 text-center">
+                    <button name="profile_saver" class="btn btn-primary profile-button" type="submit">Сохранить</button>
+                </div>
+                <div class="mt-2 mb-2">
+                    <label class="labels" style="color: crimson">{{ error }}</label>
+                </div>
             </div>
-          </div>
-          <div class="col-md-8" id="companyTriggerOn" style="opacity: 0;">
-<!--            <input type="text" id="companyInput" name="profile_company_name" class="form-control" placeholder="Название компании" disables>-->
-              {{ form9.company_name }}
-          </div>
-        </div>
-
-        <br>
-
-        <div class="row mt-3 mb-3">
-          <div class="col-md-12">
-<!--            <h1 class="labels">Расскажите о себе</h1>-->
-<!--            <textarea name="profile_description" class="form-control"></textarea>-->
-              {{ form9.description }}
-          </div>
-        </div>
-
-        <div class="row mt-3 mb-3">
-          <h1 class="labels mb-4">Контакты</h1>
-          <div class="col-md-6">
-            <div class="input-group mb-3">
-<!--              <input type="text" class="form-control" placeholder="@tag">-->
-<!--              <snap class="input-group-text" style="color: white; background-color: #229ED9;">-->
-<!--                <i class="fab fa-telegram"></i>-->
-<!--              </snap>-->
-                {{ form9.telegram }}
-            </div>
-            <div class="input-group mb-3">
-<!--              <input type="text" class="form-control" placeholder="https://vk.com/yourid">-->
-<!--              <snap class="input-group-text" style="color: white; background-color: #4c75a3;">-->
-<!--                <i class="fab fa-vk"></i>-->
-<!--              </snap>-->
-                {{ form9.vk }}
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="input-group mb-3">
-<!--              <input type="text" class="form-control" placeholder=" https://instagram.com/tag">-->
-<!--              <snap class="input-group-text" style="color: white; background-color: #ac2bac;">-->
-<!--                <i class="fab fa-instagram"></i>-->
-<!--              </snap>-->
-                {{ form9.instagram }}
-            </div>
-            <div class="input-group mb-3">
-<!--              <input type="text" class="form-control" placeholder="+71234567890">-->
-<!--              <snap class="input-group-text" style="color: white; background-color: #25d366;">-->
-<!--                <i class="fab fa-whatsapp"></i>-->
-<!--              </snap>-->
-                {{ form9.whatsapp }}
-            </div>
-          </div>
-        </div>
-
-        <div class="row mt-3 mb-3">
-          <div class="col-md-8">
-<!--            <label class="labels">Загрузить фото</label>-->
-<!--            <input id="fileupload" class="form-control" name="profile_images" type="file" />-->
-              {{ form9.cover }}
-          </div>
-        </div>
-
-        <br>
-
-        <div class="row mt-3 mb-3">
-          <div class="col-md-12">
-            <div class="form-check form-switch">
-<!--              <input class="form-check-input" type="checkbox" value="1">-->
-<!--              <label class="form-check-label">Хотите опубликовать резюме?</label>-->
-                {{ form9.published }}
-            </div>
-          </div>
-        </div>
-
-        <div class="mt-5 text-center">
-          <button name="profile_saver" class="btn btn-primary profile-button" type="submit">Сохранить</button>
-        </div>
-        <div class="mt-2 mb-2">
-          <label class="labels" style="color: crimson">{{ error }}</label>
-        </div>
-      </div>
-  </div>
-  </form>
-</div>
+        </form>
+    </div>
 
 </div>
 <script>
-  function isCompany() {
-    let companyDiv = document.getElementById('companyTriggerOn');
-    let companyInput = document.getElementById('companyInput');
-    if (document.getElementById('isCompanyTrigger').checked) {
-      companyDiv.style.opacity = 1;
-      companyInput.removeAttribute("disabled");
-    } else {
-      companyDiv.style.opacity = 0;
-      companyInput.setAttribute("disabled", "disabled");
+    function isCompany() {
+        let companyDiv = document.getElementById('companyTriggerOn');
+        let companyInput = document.getElementById('companyInput');
+        if (document.getElementById('isCompanyTrigger').checked) {
+            companyDiv.style.opacity = 1;
+            companyInput.removeAttribute("disabled");
+        } else {
+            companyDiv.style.opacity = 0;
+            companyInput.setAttribute("disabled", "disabled");
+        }
     }
-  }
+
 </script>
