--- a/bizopt/BO/templates/baseResumeCard.html
+++ b/bizopt/BO/templates/baseResumeCard.html
@@ -2,8 +2,7 @@
       <div class="wrapper">
         <div class="img-area">
           <div class="inner-area">
-            <img src="{{ creator.avatar }}"
-                    {% comment %}src="https://images.unsplash.com/photo-1492288991661-058aa541ff43?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"{% endcomment %} alt="">
+            <img src="{{ creator.avatar }}" alt="">
           </div>
         </div>
 
