--- a/bizopt/BO/templates/cardResume.html
+++ b/bizopt/BO/templates/cardResume.html
@@ -2,153 +2,67 @@
 
 {% block content %}
 
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css" />
+</head>
 
-<div class="shadow-lg p-3 mb-5 bg-body rounded">
-
-    <div class="d-flex flex-row " style="width: 80%; margin: auto">
-
-        <img class="rounded-circle mt-5" width="300px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg" style="margin: auto">
-
-
-        <div>
-           <h1 style="margin-left: 5%; font-size: 50px">{{ profile.first_name }}</h1>
-            <div class="" style="width: 30%; text-align: inherit; padding-top: 0%">
-                
-
-                <div style="width: 100%; height: auto; margin: auto">
-
-                    <div style="margin-left: 5%">
-                        <i class="fa-solid fa-star colorStarTrue"></i>
-                        <i class="fa-solid fa-star colorStarTrue"></i>
-                        <i class="fa-solid fa-star colorStarTrue"></i>
-                        <i class="fa-solid fa-star colorStarTrue"></i>
-                        <i class="fa-solid fa-star"></i>
-                    </div>
+<div class="uk-flex uk-flex-center uk-margin-top">
+    <div class="uk-card uk-card-default uk-width-1-3@m">
+        <div class="uk-card-header">
+            <div class="uk-grid-small uk-flex-middle" uk-grid>
+                <div class="uk-width-auto">
+                    <img class="uk-border-circle" width="150" height="150" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png">
                 </div>
-
-                <div>
-                    <div class="tagOut"><p style="width:0; margin: 0; color: aliceblue">{{ profile.tag }}</p></div>
+                <div class="uk-width-expand">
+                    <h3 class="uk-card-title uk-margin-remove-bottom">{{ profile.first_name }}
+                    </h3>
+                    <p class="uk-text-meta uk-margin-remove-top">{{ profile.tag }}</p>
                 </div>
+                <button class="uk-button uk-button-primary uk-remove-padding">Редактировать</button>
             </div>
-            
-            <div class="" style="width: 30%; margin: auto">
-                <p>О себе</p>
-                <br>
-
-                <p>{{ profile.description }}</p>
-
-
-
-
-                <p>Компания</p>
-                <p>{{ profile.company_name }}</p>
-            </div>
-
         </div>
-
-
-
-    </div>
-
-    <div id="content" class="row" style="margin-top: 50px; margin-left: 80px">
-
-    {% for product in products %}
-    {% if profile.email == product.id_creator %}
-
-    <div class="card" style="width: 18rem;">
-        <img src="{{ product.picture.url }}" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">{{ product.product_name }}</h5>
-            <p>
-                <label>Наличие:     </label> {{ product.availability }}
-            </p>
-            <label>Цена:     </label>
-            <div class="price">
-                {{ product.cost }} ₽
-            </div>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="cardProduct/{{ product.id }}" class="btn btn-primary">Go somewhere</a>
+        <div class="uk-card-body">
+            <p class="uk-text-meta uk-margin-remove-top uk-text-break">{{ profile.description }}</p>
+        </div>
+        <div class="uk-card-footer">
+            <p class="uk-text-meta uk-margin-remove-top">{{ profile.company_name }}</p>
         </div>
     </div>
-
-<!--    <figure class="snip1418">-->
-<!--        <img src="{{ product.picture.url }}" alt="sample85" />-->
-<!--        <div class="add-to-cart"> <i class="ion-android-add"></i><span>Add to Cart</span></div>-->
-<!--        <figcaption>-->
-<!--            <h3>{{ product.product_name }}</h3>-->
-<!--            <p>-->
-<!--                <label>Наличие:     </label> {{ product.availability }}-->
-<!--            </p>-->
-<!--            <label>Цена:     </label>-->
-<!--            <div class="price">-->
-<!--                {{ product.cost }} ₽-->
-<!--            </div>-->
-<!--        </figcaption>-->
-<!--        <a href='cardProduct/{{ product.id }}'></a>-->
-<!--    </figure>-->
-    {% endif %}
-    {% endfor %}
-
-    </div>
-
-    <style>
-    
-        .tagOut{
-            background-color: brown;
-            border-radius: 10px;
-            width: auto;
-            margin: 0;
-        }
-    
-    </style>
-
-
 </div>
 
-<script>
-    $(function() {
-        var xhr = new XMLHttpRequest()
-        xhr.open('GET', 'baseProductCard ')
-        xhr.onload = function() {
 
-            console.log(xhr.response)
-            $('#content').html(xhr.response)
-        }
-        xhr.send()
-    });
+{% for product in products %}
+{% if profile.email == product.id_creator %}
 
-    $('#showContent1').on('click', {
-        title: 'Заголовок 1',
-        content: 'Содержимое 1...'
-    }, function(inBody) {
+<div class="card" style="width: 18rem;">
+    <img src="{{ product.picture.url }}" class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title">{{ product.product_name }}</h5>
+        <p>
+            <label>Наличие: </label> {{ product.availability }}
+        </p>
+        <label>Цена: </label>
+        <div class="price">
+            {{ product.cost }} ₽
+        </div>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        <a href="cardProduct/{{ product.id }}" class="btn btn-primary">Go somewhere</a>
+    </div>
+</div>
 
-        var xhr = new XMLHttpRequest()
-        xhr.open('GET', 'baseResumeCard')
-        xhr.onload = function() {
+{% endif %}
+{% endfor %}
 
-            console.log(xhr.response)
-            $('#content').html(xhr.response)
-        }
-        xhr.send()
-    });
 
-    $('#showContent2').on('click', {
-        title: 'Заголовок 2',
-        content: 'Содержимое 2...'
-    }, function(inBody) {
-
-        var xhr = new XMLHttpRequest()
-        xhr.open('GET', 'baseProductCard')
-        xhr.onload = function() {
-
-            console.log(xhr.response)
-            $('#content').html(xhr.response)
-        }
-        xhr.send()
-
-    });
-</script>
 <style>
+    .tagOut {
+        background-color: brown;
+        border-radius: 10px;
+        width: auto;
+        margin: 0;
+    }
+
     .contantM {
         width: 100%;
         height: 40%;
@@ -160,7 +74,54 @@
         font-weight: 900;
         color: #f8ce0b;
     }
-
 </style>
+
+
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
+<script>
+    $(function () {
+        var xhr = new XMLHttpRequest()
+        xhr.open('GET', 'baseProductCard ')
+        xhr.onload = function () {
+
+            console.log(xhr.response)
+            $('#content').html(xhr.response)
+        }
+        xhr.send()
+    });
+
+    $('#showContent1').on('click', {
+        title: 'Заголовок 1',
+        content: 'Содержимое 1...'
+    }, function (inBody) {
+
+        var xhr = new XMLHttpRequest()
+        xhr.open('GET', 'baseResumeCard')
+        xhr.onload = function () {
+
+            console.log(xhr.response)
+            $('#content').html(xhr.response)
+        }
+        xhr.send()
+    });
+
+    $('#showContent2').on('click', {
+        title: 'Заголовок 2',
+        content: 'Содержимое 2...'
+    }, function (inBody) {
+
+        var xhr = new XMLHttpRequest()
+        xhr.open('GET', 'baseProductCard')
+        xhr.onload = function () {
+
+            console.log(xhr.response)
+            $('#content').html(xhr.response)
+        }
+        xhr.send()
+
+    });
+</script>
+
 
 {% endblock %}
