--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -13,7 +13,7 @@
     </div>
 
     <div id="main_change" class="col-md-8 ml-3">
-        <form method="post" action="./">
+        <form method="post" action="./" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="p-3 py-5">
                 <div class="row mt-3 d-flex align-items-center">
@@ -85,8 +85,8 @@
                 <div class="row mt-3 mb-3">
                     <div class="col-md-8">
                         <label class="labels">Загрузить фото</label>
-                        <!--            <input id="fileupload" class="form-control" name="profile_images" type="file" />-->
-                        {{ form9.cover }}
+                                   <input id="fileupload" class="form-control" name="profile_images" type="file" >
+{#                        {{ form9.cover }}#}
                     </div>
                 </div>
 
