--- a/bizopt/BO/templates/editProfile.html
+++ b/bizopt/BO/templates/editProfile.html
@@ -12,6 +12,7 @@
     <style>
         body {
             background: #343a40bf;
+            height: 100%;
         }
         
         .form-control:focus {
@@ -57,7 +58,7 @@
     </style>
 </head>
 
-<body oncontextmenu='return false' class='snippet-body'>
+<body class='snippet-body'>
     <div class="container rounded bg-white mt-5 mb-5">
         <div class="row">
             <div class="col-md-3 border-right">
@@ -111,11 +112,12 @@
             </div>
         </div>
     </div>
-    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
-    <script type='text/javascript' src=''></script>
-    <script type='text/javascript' src=''></script>
-    <script type='text/Javascript'></script>
 </body>
+
+<script type='text/javascript' src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
+<script type='text/javascript' src=''></script>
+<script type='text/javascript' src=''></script>
+<script type='text/Javascript'></script>
 <script>
     function isCreator() {
 
