--- a/bizopt/BO/templates/editProfile.html
+++ b/bizopt/BO/templates/editProfile.html
@@ -4,133 +4,92 @@
 
 <head>
     <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>BizOpt</title>
-    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css' rel='stylesheet'>
     <link href='' rel='stylesheet'>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <style>
-        body {
-            background: #343a40bf;
-            height: 100%;
-        }
-        
-        .form-control:focus {
-            box-shadow: none;
-            border-color: #BA68C8
-        }
-        
-        .profile-button {
-            background: rgb(99, 39, 120);
-            box-shadow: none;
-            border: none
-        }
-        
-        .profile-button:hover {
-            background: #682773
-        }
-        
-        .profile-button:focus {
-            background: #682773;
-            box-shadow: none
-        }
-        
-        .profile-button:active {
-            background: #682773;
-            box-shadow: none
-        }
-        
-        .back:hover {
-            color: #682773;
-            cursor: pointer
-        }
-        
-        .labels {
-            font-size: 11px
-        }
-        
-        .add-experience:hover {
-            background: #BA68C8;
-            color: #fff;
-            cursor: pointer;
-            border: solid 1px #BA68C8
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css" />
 </head>
 
-<body class='snippet-body'>
+<body>
 
-    <div class="container rounded bg-white mt-5 mb-5">
-        <div class="row">
-            <div class="col-md-3 border-right">
-                <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                    <img class="rounded-circle mt-5" width="150px" src="{{user.userImage.url}}" alt="Error">
-                    <span class="font-weight-bold ">{{user.first_name}} {{user.last_name}}</span>
-                    <span>{{user.email}}</span>
-                    <span class="text-black-50 "> {{user.username}}</span>
-                </div>
-            </div>
-            <div id="main_change " class="col-md-8 ">
-                <form method="post" enctype="multipart/form-data">
+    <div class="uk-card uk-card-default uk-grid-collapse uk-margin-medium uk-margin-medium-left uk-margin-medium-right"
+        uk-grid>
+        <div class="uk-card-media-left uk-cover-container uk-width-2-5 text-center uk-padding">
+            <img src="{{user.userImage.url}}" alt="" class="uk-border-rounded" style="width: 60%; height: 60%;">
+            <p class="uk-margin-remove-bottom uk-text-emphasis">{{user.first_name}} {{user.last_name}}</p>
+            <p class="uk-margin-small-top uk-text-muted">{{user.email}}</p>
+        </div>
+        <div class="uk-width-3-5">
+            <div class="uk-card-body">
+                <form class="uk-grid-small" method="post" enctype="multipart/form-data" uk-grid>
                     {% csrf_token %}
-                    <div class="p-3 py-5 ">
-                        <div class="d-flex justify-content-between align-items-center mb-3 ">
-                            <h4 class="text-right ">Настройки профиля</h4>
-                        </div>
-                        <div class="row mt-2 ">
-                            <div class="col-md-6 ">
-                                <label class="labels">Имя</label>
-                                <input type="text" name="first_name" class="form-control " id="first_name" placeholder="{{user.first_name}}" value="{{user.first_name}}"></div>
-                            <div class="col-md-6 ">
-                                <label class="labels">Фамилия</label>
-                                <input type="text" name="last_name" class="form-control " id="last_name" placeholder="{{user.last_name}}" value="{{user.last_name}}"></div>
-                        </div>
-                        <div class="row mt-3 ">
-                            <div class="col-md-12 ">
-                                <label class="labels">Номер телефона</label>
-                                <input type="text" name="phone" class="form-control" id="phone" placeholder="{{user.phone}}" value="{{user.phone}}"></div>
-                            <div class="col-md-12 ">
-                                <label class="labels">Город</label>
-                                <input type="text" name="city" class="form-control" id="city" placeholder="{{user.city}}" value="{{user.city}}"></div>
-                            <div class="col-md-12 ">
-                                <label class="labels">Почта</label>
-                                <input type="text" class="form-control" id="email" placeholder="{{user.email}}" value="{{user.email}}" ></div>
-                        </div>
+                    <div class="uk-width-1-2">
+                        <label class="uk-form-label">
+                            <h4>Имя</h4>
+                        </label>
+                        <input class="uk-input uk-border-rounded" name="first_naem" type="text" id="first_name"
+                            placeholder="{{user.first_name}}" value="{{user.first_name}}">
+                    </div>
 
-                        <div class="row mt-3">
-                            <div class="coll-md-3">
-                                <div class="input-group">
-                                    <input type="file" name="profile_photo" class="form-control" id="profile_photo" aria-describedby="" aria-label="">
-                                </div>
-                                <div class="mt-5 text-center ">
-                                    <button class="btn btn-primary profile-button " type="submit">Сохранить</button>
-                                </div>
-                            </div>
+                    <div class="uk-width-1-2@s">
+                        <label class="uk-form-label">
+                            <h4>Фамилия</h4>
+                        </label>
+                        <input class="uk-input uk-border-rounded" name="last_name" type="text" id="last_name"
+                            placeholder="{{user.last_name}}" value="{{user.last_name}}">
+                    </div>
+
+                    <div class="uk-width-1-2@s">
+                        <label class="uk-form-label">
+                            <h4>Город</h4>
+                        </label>
+                        <input class="uk-input uk-border-rounded" name="phone" type="text" id="phone" placeholder="{{user.phone}}"
+                            value="{{user.phone}}">
+                    </div>
+
+                    <div class="uk-width-1-2@s">
+                        <label class="uk-form-label">
+                            <h4>Телефон</h4>
+                        </label>
+                        <input class="uk-input uk-border-rounded" name="city" type="number" id="city" placeholder="{{user.city}}"
+                            value="{{user.city}}">
+                    </div>
+
+                    <div class="uk-width-1-1@s">
+                        <label class="uk-form-label">
+                            <h4>Почта</h4>
+                        </label>
+                        <input class="uk-input uk-border-rounded" name="email" type="text" id="email" placeholder="{{user.email}}"
+                            value="{{user.email}}">
+                    </div>
+
+                    <div class="uk-width-1-1@s js-upload" uk-form-custom>
+                        <label class="uk-form-label">
+                            <h4>Загрузите новое фото</h4>
+                        </label>
+                        <br>
+                        <div uk-form-custom="target: true" class="uk-width-1-1">
+                            <input name="profile_photo" type="file" id="profile_photo">
+                            <input class="uk-input uk-form-width-medium uk-width-1-1" type="text"
+                                placeholder="Select file" disabled>
                         </div>
+                    </div>
+                    <div class="uk-width-1-1@s uk-text-center uk-margin-medium-top">
+                        <button
+                            class="uk-button uk-button-primary uk-width-1-3 uk-margin-medium-right uk-border-rounded"
+                            type="submit">Сохранить</button>
+                        <button class="uk-button uk-button-primary uk-width-1-3 uk-margin-medium-left uk-border-rounded"
+                            type="">Назад</button>
+
                     </div>
                 </form>
             </div>
         </div>
     </div>
-
 </body>
 
-<script type='text/javascript' src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
-<script type='text/javascript' src=''></script>
-<script type='text/javascript' src=''></script>
-<script type='text/Javascript'></script>
-<script>
-    function isCreator() {
-
-        if (!document.getElementById('creatorSwitcher').checked) {
-            document.getElementById('creator').style.display = 'none';
-            document.getElementById('main_change').className = ('col-md-8');
-        } else {
-            document.getElementById('main_change').className = ('col-md-5 border-right');
-            document.getElementById('creator').style.display = 'inline-block';
-        }
-    }
-</script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
 
 </html>
 {% endblock %}
