--- a/partner/Part/templates/index.html
+++ b/partner/Part/templates/index.html
@@ -160,46 +160,45 @@
 
 <div class="wrapper">
     <!-- Sidebar  -->
-    <nav id="sidebar" style="background-color: #C4C4C4">
-        <div class="sidebar-header">
+    <nav id="sidebar" style="background-color: #f8f8f8">
+        <br>
+        <div class="sidebar-header uk-text-center" style="padding: 0px">
             <h3 style="color: black">BeFreela Partners</h3>
+            <br>
+            <br>
+            <img class="uk-border-circle" width="80" height="80" src="https://fashionelite.com/wp-content/uploads/2016/09/1331144712_IMG_paris1.jpg">
+            <br>
+            <br>
+            <p>{user.email}</p>
         </div>
 
-        <ul class="list-unstyled components uk-margin-left">
+        <ul class="list-unstyled components ">
 
 
-
-            <li class="Btn uk-text-left">
-                <p class="uk-text-lead">Профиль</p>
-                <button class="uk-button uk-button-text" style="margin: 0 auto; font-size: 20px; text-transform: lowercase;">Настройки</button>
+            <li class="Btn uk-text-center">
+                <button class="uk-button uk-button-default uk-width-1" style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px; background-color: #d5d5d5">Настройки профиля</button>
+            </li>
+            <li class="Btn uk-text-center uk-margin-small-top">
+                <button class="uk-button uk-button-default uk-width-1" style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px; background-color: #d5d5d5">Информация о продавцe</button>
             </li>
 
-            <li class="Btn uk-text-left uk-margin-medium-top">
-                <p class="uk-text-lead">Маркетплейс</p>
-                <button class="uk-button uk-button-text" style="margin: 0 auto; font-size: 20px; text-transform: lowercase;">Кабинет</button>
+            <li class="Btn uk-text-center uk-margin-medium-top">
+                <button class="uk-button uk-button-default uk-width-1" style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px; background-color: #d5d5d5">Магащзин</button>
             </li>
 
-            <li class="Btn uk-text-left">
-                <button class="uk-button uk-button-text" style="margin: 0 auto; font-size: 20px; text-transform: lowercase;">Товар</button>
+            <li class="Btn uk-text-center uk-margin-small-top">
+                <button class="uk-button uk-button-default uk-width-1" style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px; background-color: #d5d5d5">кабинет</button>
             </li>
-            <li class="Btn uk-text-left">
-                <button class="uk-button uk-button-text" style="margin: 0 auto; font-size: 20px; text-transform: lowercase;">Резюме</button>
+            <li class="Btn uk-text-center uk-margin-small-top">
+                <button class="uk-button uk-button-default uk-width-1" style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px; background-color: #d5d5d5">Товары</button>
             </li>
-
-            <!-- <li class="Btn uk-margin-medium-top">
-                <h4>Платформа</h4>
-                <a href="#">Кабинет</a>
-            </li>
-            <li class="Btn">
-                <a href="#">Профиль</a>
-            </li> -->
 
         </ul>
 
         <ul class="list-unstyled CTAs">
 
             <li>
-                <a href="logout/" class="article">Выйти</a>
+                <a href="logout/" class="uk-button uk-button-link" style="text-transform: lowercase;">Выйти</a>
             </li>
         </ul>
     </nav>
@@ -218,7 +217,7 @@
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
-
+{% comment %} 
 <script type="text/javascript">
     $(function () {
         var num = window.location.search[1];
@@ -251,7 +250,7 @@
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
         integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous">
-</script>
+</script> {% endcomment %}
 
 
 <style>
